# kosio

./: .gitignore  CMakeLists.txt  README.md  clean.sh  install.md  timewheel.md
cmake/: coruringConfig.cmake.in  kosioConfig.cmake.in
coruring/examples/: benchmark.cpp  unwarped_server.cpp  unwrap_benchmark.cpp
coruring/include/: core.h  log.h  timer.h
coruring/include/async/coroutine/: task.h
coruring/include/common/: concepts.h  debug.h  error.h  macros.h
coruring/include/common/util/: file_descriptor.h  nocopyable.h  noncopyable.h  random.h  singleton.h  static_math.h  thread.h  time.h
coruring/include/io/: io.h  io_uring.h
coruring/include/io/awaiter/: accept.h  cancel.h  cancle.h  close.h  connect.h  fsetxattr.h  fsync.h  getxattr.h  link.h  mkdir.h  open.h  read.h  recv.h  rename.h  send.h  shutdown.h  socket.h  splice.h  statx.h  timeout.h  timeout_recv.h  unlink.h  write.h
coruring/include/io/base/: callback.h  registrator.h
coruring/include/io/impl/: impl_async_read.h  impl_async_recv.h  impl_async_send.h  impl_async_write.h
coruring/include/log/: buffer.h  file.h  level.h  log.h  logger.h
coruring/include/runtime/: builder..h  builder.h  config.h  driver..h  driver.h  runtime.h  scheduler.h
coruring/include/runtime/io/: io_uring.h
coruring/include/runtime/scheduler/: driver.h  fired_tasks.h  queue.h  scheduler.h
coruring/include/runtime/task/: waker.h
coruring/include/runtime/timer/: entry.h  level.h  timer.h  timingwheel.h  wheel.h
coruring/include/runtime/worker/: handle.h  queue.h  thread.h  worker.h
coruring/include/scheduler/: queue.h  scheduler.h  thread.h
coruring/include/socket/: listener.h  socket.h  split.h  stream.h
coruring/include/socket/impl/: impl_local_addr.h  impl_peer_addr.h  impl_stream_read.h  impl_stream_recv.h  impl_stream_send.h  impl_stream_write.h
coruring/include/socket/net/: addr.h  listener.h  socket.h  stream.h
coruring/include/time/: sleep.h  timeout.h
coruring/include/timer/: sleep.h  timeout.h
coruring/lib/: main.cpp
coruring/lib/io/: io.cpp
coruring/lib/runtime/: driver.cpp
coruring/lib/runtime/io/: io_uring.cpp
coruring/lib/runtime/scheduler/: driver.cpp  fired_tasks.cpp  queue.cpp  scheduler.cpp
coruring/lib/runtime/task/: waker.cpp
coruring/lib/runtime/timer/: entry.cpp  level.cpp  timer.cpp
coruring/lib/socket/: socket.cpp
coruring/src/: main.cpp
coruring/src/io/: io.cpp  io_uring.cpp
coruring/src/runtime/: scheduler.cpp
coruring/src/runtime/io/: io_uring.cpp
coruring/src/runtime/scheduler/: scheduler.cpp
coruring/src/runtime/thread/: thread.cpp  worker.cpp
coruring/src/scheduler/: scheduler.cpp  thread.cpp
coruring/src/socket/: socket.cpp
doc/kosio/: about.md  bug.md  usage.md
docs/: example.md  install.md  last_update.md  modules.md
docs/design/: multi_thread.drawio  start_time = 100ms  elapsed = 0ms.md
docs/kosio/: about.md
examples/: CMakeLists.txt  benchmark.cpp  echo_client.cpp  echo_server.cpp  kvstore.cpp  unwrap_benchmark.cpp
kosio/: core.h  core.hpp  fs.hpp  log.h  log.hpp  net.h  net.hpp  signal.hpp  sync.hpp  time.hpp
kosio/async/coroutine/: task.h  task.hpp
kosio/common/: concepts.h  debug.h  debug.hpp  error.h  error.hpp  macros.hpp
kosio/common/util/: mpsc_queue.hpp  noncopyable.h  random.hpp  ring_buffer.hpp  spsc_queue.hpp  time.hpp
kosio/examples/: benchmark.cpp  unwrap_benchmark.cpp
kosio/fs/: builder.hpp  dir.hpp  file.hpp
kosio/fs/impl/: impl_async_fsync.hpp  impl_async_metadata.hpp
kosio/include/: core.h  log.h  net.h  time.h
kosio/include/common/: concepts.h  debug.h
kosio/include/io/: io.h
kosio/include/log/: level.h  logger.h
kosio/include/runtime/: builder.h  config.h  runtime.h
kosio/include/socket/: listener.h  socket.h  split.h  stream.h
kosio/include/time/: sleep.h  timeout.h
kosio/include/timer/: sleep.h  timeout.h
kosio/io/: io.cpp  io.h  io.hpp  stdio.hpp
kosio/io/awaiter/: accept.h  accept.hpp  cancel.h  cancel.hpp  close.h  close.hpp  connect.h  connect.hpp  fsetxattr.h  fsetxattr.hpp  fsync.h  fsync.hpp  getxattr.h  getxattr.hpp  link.h  link.hpp  mkdir.h  mkdir.hpp  open.h  open.hpp  read.h  read.hpp  readv.hpp  recv.h  recv.hpp  rename.h  rename.hpp  send.h  send.hpp  sendmsg.hpp  sendto.hpp  setxattr.hpp  shutdown.h  shutdown.hpp  socket.h  socket.hpp  splice.h  splice.hpp  statx.h  statx.hpp  (+6 more)
kosio/io/base/: registrator.h  registrator.hpp
kosio/io/buf/: buffer.hpp  reader.hpp  stream.hpp  writer.hpp
kosio/io/impl/: impl_async_read.h  impl_async_read.hpp  impl_async_write.h  impl_async_write.hpp  impl_buf_read.hpp  impl_buf_write.hpp
kosio/lib/: main.cpp
kosio/lib/io/: io.cpp
kosio/lib/runtime/: runtime.cpp
kosio/lib/socket/: socket.cpp
kosio/log/: buffer.h  file.hpp  logger.h  logger.hpp
kosio/net/: addr.hpp  datagram.hpp  listener.hpp  socket.hpp  split.hpp  stream.hpp
kosio/net/impl/: impl_datagram_recv.hpp  impl_datagram_send.hpp  impl_local_addr.hpp  impl_peer_addr.hpp  impl_sockopt.hpp  impl_stream_read.hpp  impl_stream_write.hpp
kosio/net/tcp/: listener.hpp  socket.hpp  stream.hpp
kosio/net/udp/: datagram.hpp
kosio/runtime/: builder.h  builder.hpp  config.hpp  runtime.h  runtime.hpp
kosio/runtime/io/: io_uring.cpp  io_uring.h  io_uring.hpp
kosio/runtime/scheduler/: driver.cpp  driver.h  driver.hpp
kosio/runtime/task/: waker.cpp  waker.h  waker.hpp
kosio/runtime/timer/: entry.h  entry.hpp  level.cpp  level.h  level.hpp  timer.cpp  timer.h  timer.hpp
kosio/signal/: kind.hpp  signal.hpp
kosio/socket/: listener.h  socket.cpp  socket.h  split.h  stream.h
kosio/socket/impl/: impl_local_addr.h  impl_peer_addr.h  impl_stream_read.h  impl_stream_write.h
kosio/socket/net/: addr.h  listener.h  socket.cpp  socket.h  stream.h
kosio/sync/: channel.hpp  condition_variable.hpp  latch.hpp  mutex.hpp  semaphore.hpp  shared_mutex.hpp  spsc_queue.hpp
kosio/sync/channel/: channel.hpp  receiver.hpp  sender.hpp
kosio/time/: sleep.h  sleep.hpp  timeout.h  timeout.hpp
tests/: CMakeLists.txt  client.cpp  io_buf.cpp  log_test.cpp  server.cpp
(+108 files in other folders)
